onedev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onedev
  namespace: onedev
spec:
  ingressClassName: "nginx"
  rules:
  - host: onedev.errorstaff.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onedev
            port:
              number: 80
